# cc-template

./: .clang-tidy  CMakeLists.txt  README.md
src/: main.cc  test.cc
